# rsource-cli

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: ci.yaml
src/: main.rs
